로그인 페이지 구현 + 촬영 선택 화면 구현 + 결과 페이지 구현

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
             android:layout_marginVertical="40dp"
-            android:text="약방"
+            android:text="Medifit"
             android:textColor="#FFFFFF"
             android:textSize="28sp"
             android:textStyle="bold"
