--- a/app/src/main/res/layout/activity_camera_search.xml
+++ b/app/src/main/res/layout/activity_camera_search.xml
@@ -1,23 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:padding="16dp"
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/preview_image"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:contentDescription="촬영 이미지 미리보기"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:scaleType="centerCrop"
-        android:background="#e0e0e0" />
+        android:background="#222"/>
+
+    <Button
+        android:id="@+id/button_shoot"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="사진 촬영"/>
 
     <Button
         android:id="@+id/button_process"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="인식 처리 페이지로 이동"
-        android:layout_marginTop="16dp" />
+        android:text="서버로 업로드"/>
 </LinearLayout>
