--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
+    <!-- Hero 배경 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/top_layout"
         android:layout_width="0dp"
         android:layout_height="310dp"
         android:background="@drawable/top_background"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
             android:id="@+id/app_name"
@@ -33,69 +36,38 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:src="@drawable/ic_yak_bang"
-            app:layout_constraintBottom_toBottomOf="@id/app_name"
-            app:layout_constraintStart_toEndOf="@+id/app_name"
-            app:layout_constraintTop_toTopOf="@+id/app_name" />
+            app:layout_constraintStart_toEndOf="@id/app_name"
+            app:layout_constraintTop_toTopOf="@id/app_name"
+            app:layout_constraintBottom_toBottomOf="@id/app_name" />
 
         <ImageView
             android:id="@+id/main_big_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="58dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="76dp"
+            android:layout_marginBottom="92dp"
             android:src="@drawable/ic_open_yak"
-            app:layout_constraintBottom_toTopOf="@+id/yak_deco_4"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <ImageView
             android:id="@+id/yak_deco_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginStart="88dp"
+            android:layout_marginBottom="40dp"
             android:src="@drawable/ic_dia"
-            app:layout_constraintBottom_toTopOf="@+id/main_big_icon"
-            app:layout_constraintStart_toEndOf="@+id/yak_deco_3" />
+            app:layout_constraintBottom_toTopOf="@id/main_big_icon"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
             android:id="@+id/yak_deco_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="4dp"
             android:src="@drawable/ic_cube"
-            app:layout_constraintBottom_toTopOf="@+id/main_big_icon"
-            app:layout_constraintEnd_toEndOf="@+id/main_big_icon" />
-
-        <ImageView
-            android:id="@+id/yak_deco_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="44dp"
-            android:layout_marginBottom="16dp"
-            android:src="@drawable/ic_cube"
-            app:layout_constraintBottom_toTopOf="@+id/yak_deco_6"
-            app:layout_constraintStart_toEndOf="@+id/yak_deco_6"
-            app:srcCompat="@drawable/ic_plus" />
-
-        <ImageView
-            android:id="@+id/yak_deco_4"
-            android:layout_width="0dp"
-            android:layout_height="12dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="55dp"
-            android:src="@drawable/ic_cube"
+            app:layout_constraintBottom_toTopOf="@id/main_big_icon"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/yak_deco_5" />
-
-        <ImageView
-            android:id="@+id/yak_deco_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="96dp"
-            android:src="@drawable/ic_plus"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            android:layout_marginEnd="40dp" />
 
         <TextView
             android:id="@+id/yak_deco_6"
@@ -121,39 +93,44 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!-- SearchView -->
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search_view"
         android:layout_width="0dp"
         android:layout_height="44dp"
-        android:autofillHints="검색어를 입력하세요."
         android:background="@drawable/rounded_rectangle_background"
-        android:elevation="10dp"
-        android:queryHint="검색어를 입력하세요."
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@id/list_layout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:clipToOutline="true"
+        android:outlineProvider="background"
+        android:elevation="3dp"
+        android:queryHint="제품명 / 업체 / 효능..."
         app:layout_constraintTop_toBottomOf="@id/top_layout"
-        app:layout_constraintWidth_percent="0.8" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.85" />
 
+    <!-- 리스트 영역 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/list_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/top_layout">
+        app:layout_constraintTop_toBottomOf="@id/search_view"
+        app:layout_constraintVertical_bias="0.0">
 
+        <!-- ✅ ChipGroup: 각 Chip에 width/height 명시 -->
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/chip_group"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="54dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -197,9 +174,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/yak_list"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginHorizontal="35dp"
+            android:layout_marginHorizontal="24dp"
+            android:background="@android:color/white"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -207,7 +185,6 @@
             app:layout_constraintTop_toBottomOf="@id/chip_group"
             tools:itemCount="4"
             tools:listitem="@layout/layout_item" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
