--- a/app/src/main/res/layout/activity_search_option.xml
+++ b/app/src/main/res/layout/activity_search_option.xml
@@ -9,14 +9,17 @@
     <include layout="@layout/include_top_appbar" />
 
     <!-- 상단 히어로 -->
+
+    <!-- ✅ 카드 컨테이너를 ScrollView로 감싸서 스크롤 가능하게 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/top_layout"
         android:layout_width="0dp"
         android:layout_height="310dp"
         android:background="@drawable/top_background"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/app_name"
@@ -37,9 +40,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:src="@drawable/ic_yak_bang"
+            app:layout_constraintBottom_toBottomOf="@id/app_name"
             app:layout_constraintStart_toEndOf="@id/app_name"
-            app:layout_constraintTop_toTopOf="@id/app_name"
-            app:layout_constraintBottom_toBottomOf="@id/app_name" />
+            app:layout_constraintTop_toTopOf="@id/app_name" />
 
         <ImageView
             android:id="@+id/main_big_icon"
@@ -60,8 +63,8 @@
             android:text="검색 방식 선택 후 시작해요!"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/hero_title"
@@ -77,7 +80,6 @@
             app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- ✅ 카드 컨테이너를 ScrollView로 감싸서 스크롤 가능하게 -->
     <ScrollView
         android:id="@+id/scroll_view"
         android:layout_width="0dp"
