--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:elevation="12dp" >
+    android:elevation="12dp">
 
     <TextView
         android:id="@+id/title"
@@ -27,6 +27,7 @@
         android:layout_marginStart="35dp"
         android:layout_marginTop="28dp"
         android:src="@drawable/ic_back"
+        android:contentDescription="@string/back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,9 +40,10 @@
         android:clipToOutline="true"
         android:elevation="5dp"
         android:scaleType="centerCrop"
+        tools:src="@drawable/ic_open_yak"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@id/title" />
 
     <TextView
         android:id="@+id/yak_name_tv"
@@ -54,10 +56,10 @@
         android:text="탁센"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/yak_iv"
+        app:layout_constraintBottom_toBottomOf="@id/yak_iv"
         app:layout_constraintEnd_toEndOf="@id/yak_iv"
         app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toStartOf="@+id/yak_iv" />
+        app:layout_constraintStart_toStartOf="@id/yak_iv" />
 
     <TextView
         android:id="@+id/yak_code"
@@ -68,8 +70,8 @@
         android:text="M01AE14"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/yak_iv"
-        app:layout_constraintStart_toStartOf="@+id/yak_name_tv" />
+        app:layout_constraintBottom_toBottomOf="@id/yak_iv"
+        app:layout_constraintStart_toStartOf="@id/yak_name_tv" />
 
     <TextView
         android:id="@+id/yak_vendor"
@@ -80,8 +82,8 @@
         android:text="대웅제약"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/yak_code"
-        app:layout_constraintStart_toEndOf="@+id/yak_code" />
+        app:layout_constraintBaseline_toBaselineOf="@id/yak_code"
+        app:layout_constraintStart_toEndOf="@id/yak_code" />
 
     <ImageView
         android:id="@+id/heart_iv"
@@ -90,8 +92,9 @@
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="34dp"
         android:src="@drawable/ic_heart"
-        app:layout_constraintBottom_toBottomOf="@+id/yak_iv"
-        app:layout_constraintEnd_toEndOf="@+id/yak_iv" />
+        android:contentDescription="@string/favorite"
+        app:layout_constraintBottom_toBottomOf="@id/yak_iv"
+        app:layout_constraintEnd_toEndOf="@id/yak_iv" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
@@ -99,11 +102,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:elevation="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/yak_iv"
-        app:layout_constraintVertical_bias="0">
+        app:layout_constraintTop_toBottomOf="@id/yak_iv">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
@@ -131,8 +132,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/tab_layout"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout" />
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
