--- a/app/src/main/res/layout/fragment_my_meds.xml
+++ b/app/src/main/res/layout/fragment_my_meds.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/add"
         app:srcCompat="@drawable/ic_add_24"
+        app:layout_anchor="@id/med_list"
         app:layout_anchorGravity="bottom|end"
-        android:layout_margin="16dp"
-        app:layout_anchor="@id/med_list"/>
+        android:layout_margin="16dp"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
