--- a/app/src/main/res/layout/item_chat_bot.xml
+++ b/app/src/main/res/layout/item_chat_bot.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginVertical="6dp"
-    android:layout_gravity="start"
-    app:cardCornerRadius="18dp"
-    app:cardUseCompatPadding="true">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingVertical="4dp">
 
-    <TextView
-        android:id="@+id/tv_msg"
-        android:layout_width="wrap_content"
+    <!-- 배경을 여기! -->
+    <LinearLayout
+        android:id="@+id/bubble_bot"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_bubble_bot"
         android:padding="12dp"
-        android:textColor="@android:color/black"
-        android:textSize="15sp"
-        android:maxWidth="280dp"
-        android:text="무엇을 도와드릴까요?" />
+        app:layout_constraintWidth_percent="0.82"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-</com.google.android.material.card.MaterialCardView>
+        <TextView
+            android:id="@+id/tv_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="?attr/colorOnSurface"
+            android:textSize="14sp"
+            android:lineSpacingExtra="2dp"/>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
