--- a/app/src/main/res/layout/item_chat_user.xml
+++ b/app/src/main/res/layout/item_chat_user.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="6dp"
-    android:layout_gravity="end"
-    app:cardCornerRadius="18dp"
-    app:cardUseCompatPadding="true">
+    android:paddingVertical="4dp">
 
-    <TextView
-        android:id="@+id/tv_msg"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/bubble_user"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_bubble_user"
         android:padding="12dp"
-        android:textColor="@android:color/black"
-        android:textSize="15sp"
-        android:maxWidth="280dp"
-        android:text="안녕!" />
+        app:layout_constraintWidth_percent="0.76"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-</com.google.android.material.card.MaterialCardView>
+        <TextView
+            android:id="@+id/tv_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:lineSpacingExtra="2dp"/>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
